[gd_scene load_steps=3 format=3 uid="uid://dafqri5veorht"]

[ext_resource type="Script" path="res://src/random_pawn.gd" id="1_7iabs"]

[sub_resource type="Theme" id="Theme_sy58b"]
RichTextLabel/font_sizes/bold_font_size = 32
RichTextLabel/font_sizes/normal_font_size = 24

[node name="random_pawn" type="Node2D"]
script = ExtResource("1_7iabs")

[node name="create_pawn" type="Button" parent="."]
offset_left = 348.0
offset_top = 37.0
offset_right = 690.0
offset_bottom = 105.0
text = "Create Random Pawn!"

[node name="save_pawn" type="Button" parent="."]
offset_left = 455.0
offset_top = 122.0
offset_right = 583.0
offset_bottom = 176.0
text = "Save"

[node name="Name" type="RichTextLabel" parent="."]
offset_left = 38.0
offset_top = 223.0
offset_right = 338.0
offset_bottom = 274.0
theme = SubResource("Theme_sy58b")
bbcode_enabled = true
text = "[b]Name:"
scroll_active = false

[node name="Race" type="RichTextLabel" parent="."]
offset_left = 48.0
offset_top = 476.0
offset_right = 348.0
offset_bottom = 527.0
theme = SubResource("Theme_sy58b")
bbcode_enabled = true
text = "[b]Race:"
scroll_active = false

[node name="Trait" type="RichTextLabel" parent="."]
offset_left = 43.0
offset_top = 345.0
offset_right = 343.0
offset_bottom = 396.0
theme = SubResource("Theme_sy58b")
bbcode_enabled = true
text = "[b]Trait:"
scroll_active = false

[node name="generated_name" type="RichTextLabel" parent="."]
offset_left = 67.0
offset_top = 268.0
offset_right = 413.0
offset_bottom = 329.0

[node name="generated_trait" type="RichTextLabel" parent="."]
offset_left = 76.0
offset_top = 407.0
offset_right = 422.0
offset_bottom = 468.0

[node name="generated_race" type="RichTextLabel" parent="."]
offset_left = 80.0
offset_top = 534.0
offset_right = 426.0
offset_bottom = 595.0

[connection signal="property_list_changed" from="." to="." method="_on_property_list_changed"]
[connection signal="button_down" from="create_pawn" to="." method="_on_create_pawn"]
[connection signal="button_down" from="save_pawn" to="." method="_on_save_pawn"]
